--- a/ex022/index2.html
+++ b/ex022/index2.html
@@ -5,13 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>imagens de fundo</title>
     <style>
-        body{
-            background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
-            background-size: 100px 100px;
+        .bloco{
+            height: 200px;
+            border: 2px solid #000;
+            border-radius: 20px;
+            margin: 10px;
+            background-image: url('images/wallpaper002.jpg');
+            background-repeat: no-repeat;
+        }
+
+        #q1{
+            background-position: left top;
+        }
+
+        #q2{
+            background-position: left center;
+        }
+
+        #q3{
+            background-position: right bottom;
+        }
+
+        #q4{
+            background-position: center center;
         }
     </style>
 </head>
 <body>
-    
+    <div class="bloco" id="q1"></div>
+    <div class="bloco" id="q2"></div>
+    <div class="bloco" id="q3"></div>
+    <div class="bloco" id="q4"></div>
 </body>
 </html>
