shorthand de background

--- a/ex022/index3.html
+++ b/ex022/index3.html
@@ -6,12 +6,19 @@
     <title>ex022 3</title>
     <style>
         body{
-            height: 100vh;
+           /* height: 100vh;
             background-color: #000;
             background-image: url('images/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;/*
+
+            /* Shorthand para background 
+            
+                color > image > position > size > / > repeat > attachment */
+
+                background: #000 url('images/wallpaper002.jpg') center center/cover no-repeat fixed;
         }
 
         main{
@@ -27,7 +34,12 @@
 <body>
     <main>
         <h1>Treinamento</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, nostrum. Cupiditate eum aspernatur, explicabo quaerat laborum placeat, repudiandae nam praesentium laboriosam veritatis ipsum neque alias, expedita adipisci ad libero voluptatum!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat iusto laborum quia voluptatum molestiae facilis hic provident voluptate eos assumenda quas accusamus quasi, ea praesentium saepe accusantium quae quaerat iure?</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates, nostrum. Cupiditate eum aspernatur, explicabo quaerat laborum placeat, repudiandae nam praesentium laboriosam veritatis ipsum neque alias, expedita adipisci ad libero voluptatum!Lorem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat iusto laborum quia voluptatum molestiae facilis hic provident voluptate eos assumenda quas accusamus quasi, ea praesentium saepe accusloremantium quae quaerat iure? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, reiciendis ad repellendus mollitia, eum recusandae odit quos, voluptatem quidem magnam rem veritatis. Est incidunt, consectetur laboriosam quisquam totam sit possimus?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor sed, delectus eveniet soluta, amet facilis ratione blanditiis libero error ipsa voluptates fuga perferendis. Eaque sit fugiat recusandae sunt illo. Fugiat.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem provident, odio repudiandae in architecto atque quae? Animi vero omnis architecto dolore deleniti rerum maiores! Minima repellat non adipisci suscipit ratione. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ducimus possimus molestiae earum maxime aut, ab modi, ullam debitis eos, quam velit culpa fuga iusto odit omnis amet provident optio! lorem 
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum aliquid vitae velit, aspernatur debitis esse magni ipsam corporis aperiam eveniet ea consectetur iste dolor nisi labore quod error qui quae.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non id unde consequatur dolorum officiis tenetur soluta quasi exercitationem magnam quis, numquam totam dignissimos veritatis veniam dicta nobis perspiciatis nostrum at? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa aspernatur quas quod cumque praesentium suscipit, delectus officia dolorem libero. Qui, aperiam neque facilis quis quas sit odit voluptatum eos voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut voluptates hic officia impedit ipsa, eveniet voluptatibus nemo, voluptas delectus molestiae aliquam! Obcaecati magni tenetur sapiente iure laudantium. Sed, ipsa sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, repellat! Itaque molestias dolore eveniet iste iusto, omnis, dolorem, eum numquam incidunt aut quod sapiente cum. Ducimus, harum. Repellendus, vel sequi. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt assumenda ex voluptates sequi sed? Est libero animi cupiditate reiciendis quas, reprehenderit debitis laudantium voluptatibus, totam itaque nesciunt quisquam beatae hic? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam asperiores sapiente beatae deserunt debitis officiis voluptatibus magni eaque ea praesentium temporibus numquam vero blanditiis, amet a maiores voluptates modi optio? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ipsum consequuntur asperiores ab architecto earum laborum consectetur, vero placeat vel assumenda, doloremque, saepe voluptas facere porro dolorum nam? Reprehenderit, sapiente! lorem 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam vero, aliquam possimus maiores perferendis minima! Quos necessitatibus at dolorum facilis. Eos suscipit labore odio quos aliquam cumque fugiat alias reprehenderit.lorem 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, ducimus neque. Explicabo alias consequuntur ducimus maxime in sapiente facere ipsa nostrum non omnis, enim inventore voluptates similique consequatur libero eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sint error eos similique ea ab corporis sapiente dolorem dolores omnis nisi harum, perspiciatis soluta perferendis facilis aspernatur nam rerum assumenda.
+        </p>
     </main>
 </body>
 </html>
